--- a/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
+++ b/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
@@ -14,7 +14,6 @@ import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import org.axonframework.eventhandling.EventHandler;
 
-
 @Service
 @RequiredArgsConstructor
 public class PasswordResetService {
@@ -29,11 +28,11 @@ public String createToken(String email) {
 String token = UUID.randomUUID().toString();
 Instant expiration = Instant.now().plusSeconds(3600);
 
-var command = new CreatePasswordResetCommand(
-new PasswordResetToken(token),
-new PasswordResetUsername(email),
-new PasswordResetExpiration(expiration)
-);
+var command = CreatePasswordResetCommand.builder()
+.token(PasswordResetToken.create(token))
+.username(PasswordResetUsername.create(email))
+.expiration(PasswordResetExpiration.create(expiration))
+.build();
 
 commandGateway.sendAndWait(command);
 return token;
@@ -42,7 +41,7 @@ return token;
 @Transactional
 public boolean resetPassword(String token, String newPassword) {
 try {
-var query = new FindByPasswordResetTokenQuery(new PasswordResetToken(token));
+var query = new FindByPasswordResetTokenQuery(PasswordResetToken.create(token));
 var tokenEntity = queryGateway.query(query, PasswordResetResponse.class).get();
 
 if (tokenEntity == null || tokenEntity.getExpiration().isBefore(Instant.now())) return false;
@@ -52,7 +51,10 @@ if (user == null) return false;
 
 user.setPassword(encoder.encode(newPassword));
 
-var deleteCommand = new DeletePasswordResetCommand(new PasswordResetId(tokenEntity.getId()));
+var deleteCommand = DeletePasswordResetCommand.builder()
+.id(PasswordResetId.create(tokenEntity.getId()))
+.build();
+
 commandGateway.send(deleteCommand);
 return true;
 
@@ -63,12 +65,11 @@ return false;
 
 @EventHandler
 public void on(PasswordResetCreatedEvent event) {
-
-	this.mailSender.send(
-		"noreply@pcoundia.com",
-		event.getUsername().value(),
-		"Password Reset",
-		"Your token: " + event.getToken() );
-
+this.mailSender.send(
+"noreply@pcoundia.com",
+event.getUsername().value(),
+"Password Reset",
+"Your token: " + event.getToken()
+);
 }
 }
