--- a/src/main/resources/templates/application/dtoEntityDelta.mustache
+++ b/src/main/resources/templates/application/dtoEntityDelta.mustache
@@ -27,11 +27,11 @@ public class {{className}} implements Serializable {
 	@Builder.Default
     private String type = "CREATE";
 
-	{{#fields}}
+	{{#editableFields}}
 		{{^isId}}
 		@Schema(description = "{{description}}", example = "{{{primitiveValue}}}")
 		private {{primitiveType}} {{name}};
 		{{/isId}}
-	{{/fields}}
+	{{/editableFields}}
 
 }
