--- a/src/main/resources/templates/application/updateApplicationService.mustache
+++ b/src/main/resources/templates/application/updateApplicationService.mustache
@@ -49,12 +49,19 @@ return {{name}}Mapper.toResponse(command);
 {{/hasFiles}}
 
 {{^hasFiles}}
-public {{name}}Response update{{name}}({{name}}Id id,{{name}}Request request){
+public {{name}}Response update{{name}}({{name}}Id id,{{name}}Request request,
+String createdBy {{#isMultiTenant}},
+String tenantId {{/isMultiTenant}}
+){
 
 Update{{name}}Command command = {{name}}Mapper.toUpdateCommand(
 id,
 request
 );
+
+if(createdBy != null) {
+command.setCreatedBy( {{name}}CreatedBy.create(createdBy));
+}
 
 commandGateway.sendAndWait(command);
 
