--- a/src/main/resources/templates/presentation/syncController.mustache
+++ b/src/main/resources/templates/presentation/syncController.mustache
@@ -11,6 +11,8 @@ import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import jakarta.validation.Valid;
@@ -40,10 +42,17 @@ public class {{className}} {
 		@ApiResponse(responseCode = "500", description = "Internal server error",
 		content = @Content(schema = @Schema()))
 		})
-		public ResponseEntity<ApiResponseDto> sync{{name}}(@Valid @RequestBody {{name}}SyncRequest request) {
+		public ResponseEntity<ApiResponseDto> sync{{name}}(
+	@AuthenticationPrincipal Jwt jwt,
+	@Valid @RequestBody {{name}}SyncRequest request) {
 			try {
-
-			applicationService.sync{{name}}(request);
+			applicationService.sync{{name}}(
+					request,
+					RequestContext.getUserId(jwt)
+					{{#isMultiTenant}},
+					  RequestContext.getTenantId(jwt)
+					{{/isMultiTenant}}
+				);
 			return ResponseEntity.ok(ApiResponseDto.builder()
 				.code(1)
 				.message("Sync in progress")
