--- a/src/main/resources/templates/tests/createControllerIntegrationTest.mustache
+++ b/src/main/resources/templates/tests/createControllerIntegrationTest.mustache
@@ -21,21 +21,21 @@ void it_should_be_able_to_add_{{nameLower}}() {
 
 		{{name}}Request requestDTO = new {{name}}Request();
 
-		{{#fields}}
+		{{#editableFields}}
 			{{^isId}}
 		requestDTO.set{{nameCapitalized}}({{{testValue}}});
 			{{/isId}}
-		{{/fields}}
+		{{/editableFields}}
 
  		String uri = "/v1/commands/{{entityUnCapitalized}}";
 		ResponseEntity<{{name}}Response> response = this.postForEntity(uri, requestDTO, {{name}}Response.class);
 		assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
 		assertThat(response.getBody()).isNotNull();
 		assertThat(response.getBody().getId()).isNotNull();
-		{{#fields}}
+		{{#editableFields}}
 			{{^isId}}
 		assertThat(response.getBody().get{{nameCapitalized}}()).isEqualTo(requestDTO.get{{nameCapitalized}}());
 			{{/isId}}
-		{{/fields}}
+		{{/editableFields}}
 	}
 }
